--- a/project/flowers.html
+++ b/project/flowers.html
@@ -35,9 +35,11 @@
 </div>
 
 <div class="middle_part">
- <div class="left_middle-part">
-    <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Category products</div>
-   <div class="new_prod_flower">
+  <div class="left_middle-part_flower">
+      <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Flowers</div>
+ 
+    <div class="left_middle-part_flower">
+  <div class="new_prod_flower">
      
       <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
@@ -189,7 +191,7 @@
         </div>
       </section>
  </div>
-
+ </div>
 <div class="right_middle-part">
       <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="Language" /></a> <a href="#"><img src="pic/fr.gif" alt="Language" /></a> <a href="#"><img src="pic/de.gif" alt="Language"/></a>
        </div>
