--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -38,12 +38,10 @@
 </div>
 
 <div class="middle_part">
-  <div class="left_middle-part">
-   <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Special gifts</div>
-
-     <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
+  <div class="left_middle-part_flower">
+      <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Featured products</div>
  
-<!--   <div id="all_products">-->
+    <div class="left_middle-part_flower">
 
    <div class="prod">
      <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
@@ -223,7 +221,7 @@
         </div>
       </section>
  </div>
-
+ </div> 
 <div class="right_middle-part">
       <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="Language" /></a> <a href="#"><img src="pic/fr.gif" alt="Language" /></a> <a href="#"><img src="pic/de.gif" alt="Language"/></a>
        </div>
