--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -44,7 +44,7 @@
     <div class="left_middle-part_flower">
 
    <div class="prod">
-     <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
+     <img class="prod_img_flower" src="pic/prod1.gif" alt="Photo1">
  
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
        <div class="prod_title_middle">Product name 1</div>
