--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -39,7 +39,7 @@
 
 <div class="middle_part">
   <div class="left_middle-part_flower">
-      <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Featured products</div>
+      <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Special gifts</div>
  
     <div class="left_middle-part_flower">
 
