--- a/project/flowers.html
+++ b/project/flowers.html
@@ -38,8 +38,8 @@
   <div class="left_middle-part_flower">
       <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Flowers</div>
  
-    <div class="left_middle-part_flower">
-  <div class="new_prod_flower">
+  <!--<div class="left_middle-part_flower">
+  <div class="new_prod_flower">-->
      
       <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
@@ -152,7 +152,7 @@
    </div>     
          
 
-      </div>
+   <!--   </div>-->
    <section class="pager">
     <div class="pager__info">
     Show 1 to 10 of 150 rows
@@ -191,7 +191,7 @@
         </div>
       </section>
  </div>
- </div>
+<!-- </div>-->
 <div class="right_middle-part">
       <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="Language" /></a> <a href="#"><img src="pic/fr.gif" alt="Language" /></a> <a href="#"><img src="pic/de.gif" alt="Language"/></a>
        </div>
