--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="middle_part">
-  <div class="left_middle-part_flower">
+  <div class="left_middle-part">
       <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Special gifts" /></span>Special gifts</div>
  
     <div class="left_middle-part_flower">
