--- a/project/flowers.html
+++ b/project/flowers.html
@@ -10,6 +10,7 @@
  </head>
 
 
+ 
             
   <div id="popup-container">
   <div id="popup">
@@ -40,7 +41,7 @@
   <div class="left_middle-part">
      <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Featured products</div>
  
-  <div class="new_part_with_prod">
+  <div class="new_part_with_prod_flower">
 
 
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
@@ -111,7 +112,7 @@
           </div>
          </div>
 
-
+ </div>
       <section class="pager">
           <div class="pager__info">
     Show 1 to 10 of 150 rows
@@ -148,7 +149,7 @@
             </a>
         </div>
       </section>
- </div>
+
 </div>
   
   
@@ -241,6 +242,7 @@
  </div>
 
 </div>
+
 
 
 <script defer type="text/javascript" src="project.js"></script>
