--- a/project/flowers.html
+++ b/project/flowers.html
@@ -27,8 +27,8 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about_us.html">about us</a></li>
-        <li><a href="flowers.html">flowers</a></li>
-        <li class="selected"><a href="specials_gifts.html">specials gifts</a></li>
+        <li  class="selected"><a href="flowers.html">flowers</a></li>
+        <li><a href="specials_gifts.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="register.html">register</a></li>
         <li><a href="prices.html">prices</a></li>
@@ -39,7 +39,7 @@
 
 <div class="middle_part">
   <div class="left_middle-part">
-     <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Featured products</div>
+     <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Flowers</div>
  
   <div class="new_part_with_prod_flower">
 
