--- a/project/flowers.html
+++ b/project/flowers.html
@@ -39,12 +39,12 @@
 
 <div class="middle_part">
   <div class="left_middle-part">
-     <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Flowers</div>
+     <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Flowers" /></span>Flowers</div>
  
   <div class="new_part_with_prod_flower">
 
 
-<table cellpadding="0" cellspacing="0" id="medals-table">
+<table cellpadding="0" cellspacing="0" id="flower-table">
   <tbody>
     <tr>
       <td>
