--- a/project/prices.html
+++ b/project/prices.html
@@ -42,7 +42,7 @@
     </div>
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
   
-     <div class="prod_price">
+   <div class="prod_price">
      
      <section class="zoom_img">
    <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
@@ -58,8 +58,30 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
             <div class="price"><strong>COLORS:</strong> <span class="colors"><img src="pic/color1.gif" alt="Yellow" border="0" /></span> <span class="colors"><img src="pic/color2.gif" alt="Green" border="0" /></span> <span class="colors"><img src="pic/color3.gif" alt="Blue" border="0" /></span> </div>
             <a href="#" class="more"><img src="pic/order_now.gif" alt="More" border="0" /></a>
      </div>
+     </>
      
  </div>
+   
+   <div id="demo" class="demolayout">
+        <ul id="demo-nav" class="demolayout">
+          <li><a class="active" href="#tab1">More details</a></li>
+          <li><a class="" href="#tab2">Related Products</a></li>
+        </ul>
+        <div class="tabs-container">
+          <div style="display: block;" class="tab" id="tab1">
+            <p class="prod_text_middle_price">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+            <ul class="list">
+              <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+              <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+              <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+              <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+            </ul>
+            <p class="prod_text_middle_price">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+          </div>
+          <div style="display: none;" class="tab" id="tab2">
+   </div>
+     </div>
+      </div>
    
  </div>
 
