--- a/project/prices.html
+++ b/project/prices.html
@@ -79,9 +79,197 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
             <p class="prod_text_middle_price">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
           </div>
           <div style="display: none;" class="tab" id="tab2">
+            
+            <table cellpadding="0" cellspacing="0" id="flower-table">
+  <tbody>
+    <tr>
+      <td>
+         <div class="new_prod_part"> <a href="#">product name 1</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 2</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+            <div class="new_prod_part"> <a href="#">product name 3</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 4</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 5</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+         <div class="new_prod_part"> <a href="#">product name 6</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 7</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 8</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+         <div class="new_prod_part"> <a href="#">product name 9</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+         <div class="new_prod_part"> <a href="#">product name 10</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 11</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 12</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 13</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 14</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 15</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 16</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 17</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 18</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 19</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 20</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 21</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 22</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 23</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 24</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="new_prod_part"> <a href="#">product name 25</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          </div>
+         </div>
+      </td>
+    </tr>
+  </tbody>
+    </table>
+            
    </div>
      </div>
       </div>
+   
+       <section class="pager">
+          <div class="pager__info">
+    Show 1 to 10 of 150 rows
+  </div>
+      <div class="pager__controls">
+            <a class="pager__prev">
+                Previous
+            </a>
+            <a href="#" class="pager__next">
+                Next
+            </a>
+        </div>
+      </section>
    
  </div>
 
@@ -177,6 +365,9 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 
 <script defer type="text/javascript" src="project.js"></script>
+
+<script defer type="text/javascript" src="scrolprod.js"></script>
+
 
   
 </body>
