--- a/project/prices.html
+++ b/project/prices.html
@@ -45,9 +45,9 @@
    <div class="prod_price">
      
      <section class="zoom_img">
-   <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
+   <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
-     <img src="pic/zoom.gif" alt="Zoom"/>
+     <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
        </section>
        
    <div class="part_with_prod">
