--- a/project/prices.html
+++ b/project/prices.html
@@ -369,7 +369,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 <script defer type="text/javascript" src="project.js"></script>
 
-<script defer type="text/javascript" src="scrolprod.js"></script>
+<script defer type="text/javascript" src="scrolflowers.js"></script>
 
   
 </body>
