--- a/project/prices.html
+++ b/project/prices.html
@@ -47,7 +47,7 @@
      <section class="zoom_img">
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
-     <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
+   <!--  <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>-->
        <img src="pic/zoom.gif" name="example_img"
   alt="Zoom">
        </section>
