--- a/project/prices.html
+++ b/project/prices.html
@@ -50,6 +50,7 @@
    <!--  <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>-->
        <img src="pic/zoom.gif" name="example_img"
   alt="Zoom">
+       <a href="pic/big_pic.jpg" rel="lightbox"><img src="pic/zoom.gif" alt="" border="0" /></a> 
        </section>
        
    <div class="part_with_prod">
