--- a/project/prices.html
+++ b/project/prices.html
@@ -47,9 +47,9 @@
      <section class="zoom_img">
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
-   <!--  <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>-->
+   <!--  <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
        <img src="pic/zoom.gif" name="example_img"
-  alt="Zoom">
+  alt="Zoom">-->
        <a href="pic/big_pic.jpg" rel="lightbox"><img src="pic/zoom.gif" alt="" border="0" /></a> 
        </section>
        
