--- a/project/prices.html
+++ b/project/prices.html
@@ -6,8 +6,7 @@
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" />
-  <script src="lightbox.js" type="text/javascript"></script> 
+
  </head>
 
  <body>
@@ -48,10 +47,10 @@
      <section class="zoom_img">
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
-   <!--  <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
-       <img src="pic/zoom.gif" name="example_img"
+ <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
+<!--       <img src="pic/zoom.gif" name="example_img"
   alt="Zoom">-->
-       <a href="pic/big_pic.jpg" rel="lightbox"><img src="pic/zoom.gif" alt="" border="0" /></a> 
+     
        </section>
        
    <div class="part_with_prod">
