--- a/project/prices.html
+++ b/project/prices.html
@@ -47,8 +47,11 @@
      <section class="zoom_img">
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
- <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
-<!--       <img src="pic/zoom.gif" name="example_img"
+ 
+       <img src="pic/zoom.gif" height="150" onclick="changeSizeImage(this)" />
+<!-- 
+<img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
+<img src="pic/zoom.gif" name="example_img"
   alt="Zoom">-->
      
        </section>
