--- a/project/prices.html
+++ b/project/prices.html
@@ -48,7 +48,7 @@
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
  
-      <img SRC="pic/prod1.gif" onclick=imgchange(.prod_img_zoom,"pic/prod1.gif","pic/big_pic")>
+      <img SRC="pic/prod1.gif" onclick=imgchange(this,"pic/prod1.gif","pic/big_pic")>
 <script>
   var x=false
   function imgchange(obj,imgX,imgY) {
