--- a/project/prices.html
+++ b/project/prices.html
@@ -49,7 +49,7 @@
      <br />
  
       <img SRC="pic/zoom.gif" onclick=imgchange(this,"pic/prod1.gif","pic/big_pic.jpg")>
-<script>
+<!--<script>
   var x=false
   function imgchange(obj,imgX,imgY) {
    if  (x){
@@ -59,7 +59,7 @@
    }
   x=!x
  }
- </script>
+ </script>-->
 
 <!-- 
 <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
