--- a/project/prices.html
+++ b/project/prices.html
@@ -48,18 +48,7 @@
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
  
-      <img SRC="pic/zoom.gif" onclick="newMyWindow(this,"pic/big_pic.jpg"); return false;>
-<!--<script>
-  var x=false
-  function imgchange(obj,imgX,imgY) {
-   if  (x){
-   obj.src=imgX
-   } else {
-   obj.src=imgY
-   }
-  x=!x
- }
- </script>-->
+      <img SRC="pic/zoom.gif" onclick="newMyWindow(this,"pic/big_pic.jpg"); return false>
 
 <!-- 
 <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
