--- a/project/prices.html
+++ b/project/prices.html
@@ -48,7 +48,7 @@
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
  
-      <img SRC="pic/zoom.gif" onclick="newMyWindow(this,"pic/big_pic.jpg"); return false>
+      <img SRC="pic/zoom.gif" onclick="newMyWindow(this,"pic/big_pic.jpg")>
 
 <!-- 
 <img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
