--- a/project/prices.html
+++ b/project/prices.html
@@ -48,13 +48,8 @@
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
  
-      <img SRC="pic/zoom.gif" onclick="newMyWindow(this,"pic/big_pic.jpg")>
+      <img SRC="pic/zoom.gif" onclick="imgchange(this,"pic/big_pic.jpg")>
 
-<!-- 
-<img src="pic/zoom.gif" class="prod_img_zoom" alt="Zoom"/>
-<img src="pic/zoom.gif" name="example_img"
-  alt="Zoom">-->
-     
        </section>
 
      
