--- a/project/prices.html
+++ b/project/prices.html
@@ -48,7 +48,7 @@
    <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
      <br />
  
-      <img SRC="pic/zoom.gif" onclick="imgchange(this,"pic/big_pic.jpg")>
+         <img SRC="pic/zoom.gif" onclick=imgchange(this,"pic/big_pic.jpg")>
 
        </section>
 
