--- a/project/prices.html
+++ b/project/prices.html
@@ -45,11 +45,10 @@
    <div class="prod_price">
      
      <section class="zoom_img">
-   <img class="prod_img_bg_zoom" src="pic/prod1.gif" alt="Photo1">
-     <br />
- 
-         <img SRC="pic/zoom.gif" onclick=imgchange(this,"pic/big_pic.jpg")>
+        <img src="pic/prod1.gif" class="image_zoom" title="Нажмите для увеличения изображения" width="100" tabindex="0"/>
 
+     <br />
+          <img class="button_zoom" src="pic/zoom.gif" alt="Zoom">
        </section>
 
      
