--- a/project/cart.html
+++ b/project/cart.html
@@ -28,7 +28,7 @@
         <li><a href="about_us.html">about us</a></li>
         <li><a href="flowers.html">flowers</a></li>
         <li><a href="specials_gifts.html">specials gifts</a></li>
-        <li class="selected"><a href="myaccaunt.html">my accout</a></li>
+        <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="register.html">register</a></li>
         <li><a href="prices.html">prices</a></li>
         <li><a href="contact.html">contact</a></li>
