--- a/project/cart.html
+++ b/project/cart.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-  <meta charset="utf-8" name="My accaunt">
+  <meta charset="utf-8" name="Cart">
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
@@ -39,8 +39,49 @@
 <div class="middle_part">
  <div class="left_middle-part">
 
-
-
+<div class="title_middle"><span class="title_icon"><img src="pic/bullet1.gif" alt="My cart" /></span>My cart</div>
+ <div class="div_about">
+        <table class="cart_table">
+          <tr class="cart_title">
+            <td>Item pic</td>
+            <td>Product name</td>
+            <td>Unit price</td>
+            <td>Qty</td>
+            <td>Total</td>
+          </tr>
+          <tr>
+            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td>Gift flowers</td>
+            <td>100$</td>
+            <td>1</td>
+            <td>100$</td>
+          </tr>
+          <tr>
+            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td>Gift flowers</td>
+            <td>100$</td>
+            <td>1</td>
+            <td>100$</td>
+          </tr>
+          <tr>
+            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td>Gift flowers</td>
+            <td>100$</td>
+            <td>1</td>
+            <td>100$</td>
+          </tr>
+          <tr>
+            <td colspan="4" class="cart_total"><span class="red">TOTAL SHIPPING:</span></td>
+            <td> 250$</td>
+          </tr>
+          <tr>
+            <td colspan="4" class="cart_total"><span class="red">TOTAL:</span></td>
+            <td> 325$</td>
+          </tr>
+        </table>
+        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a> </div>
+      <div class="clear"></div>
+    </div>
 
  </div>
 
