--- a/project/index.html
+++ b/project/index.html
@@ -88,7 +88,7 @@
       <div class="cart">
         <div class="title"><span class="title_icon"><img src="pic/cart.gif" alt="Cart" /></span>My cart</div>
         <div class="cart_content"> 3 x items | <span >TOTAL: 100$</span> </div>
-        <a href="#" class="view_cart">view cart</a> </div>
+        <a href="cart.html" class="view_cart">view cart</a> </div>
       <div class="about">
       <div class="bottom-part_right"></div>
       <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="About Shop" /></span><a href="about_us.html">About Our Shop</a></div>
