--- a/project/prices.html
+++ b/project/prices.html
@@ -288,7 +288,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
      <div class="cart">
         <div class="title"><span class="title_icon"><img src="pic/cart.gif" alt="Cart" /></span>My cart</div>
         <div class="cart_content"> 3 x items | <span >TOTAL: 100$</span> </div>
-        <a href="#" class="view_cart">view cart</a> </div>
+        <a href="cart.html" class="view_cart">view cart</a> </div>
  
   <div class="about">
       <div class="bottom-part_right"></div>
