--- a/project/cart.html
+++ b/project/cart.html
@@ -79,9 +79,8 @@
             <td> 325$</td>
           </tr>
         </table>
-        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a> </div>
-      <div class="clear"></div>
-    </div>
+        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a> 
+   </div>
 
  </div>
 
