--- a/project/cart.html
+++ b/project/cart.html
@@ -80,7 +80,7 @@
             <td> 325$</td>
           </tr>
         </table>
-        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a> 
+        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout"> &gt;</a> 
    </div>
 
  </div>
