--- a/project/index.html
+++ b/project/index.html
@@ -42,7 +42,7 @@
 
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
    <div class="prod">
-   <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
+   <img class="prod_img" src="pic/prod1.gif" data-type="slide" alt="Photo1">
    <div class="part_with_prod">
    <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
@@ -51,7 +51,7 @@
      </div>
    <div class="bottom-part"></div>
     <div class="prod">
-   <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
+   <img class="prod_img" src="pic/prod2.gif" data-type="slide" alt="Photo2">
    <div class="part_with_prod">
    <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
@@ -59,22 +59,22 @@
      </div>
      </div>
   
-     <div class="title_middle"><span class="title_icon"><img src="pic/bullet2.gif" alt="New products" /></span>New products</div>
+     <div class="title_middle"><span class="title_icon"><img src="pic/bullet2.gif" data-type="slide"  alt="New products" /></span>New products</div>
       <div class="new_prod">
      
      <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
         </div> 
        </div>
            <div class="new_part_with_prod">
      <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
         </div>  
        </div>
           <div class="new_part_with_prod">
             <div class="new_prod_part"> <a href="#">product name</a>
-             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
              </div>  
             </div>
          </div>
@@ -162,6 +162,8 @@
   </div>
 
 </div>
+
+
 <script defer type="text/javascript" src="project.js"></script>
   
 </body>
