--- a/project/index.html
+++ b/project/index.html
@@ -59,22 +59,22 @@
      </div>
      </div>
   
-     <div class="title_middle"><span class="title_icon"><img src="pic/bullet2.gif" data-type="slide"  alt="New products" /></span>New products</div>
+     <div class="title_middle"><span class="title_icon"><img src="pic/bullet2.gif" alt="New products" /></span>New products</div>
       <div class="new_prod">
      
      <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif"  alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif"  data-type="slide" alt="" class="product" border="0" /></a> </div>
         </div> 
        </div>
            <div class="new_part_with_prod">
      <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif"  data-type="slide" alt="" class="product" border="0" /></a> </div>
         </div>  
        </div>
           <div class="new_part_with_prod">
             <div class="new_prod_part"> <a href="#">product name</a>
-             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" data-type="slide"  alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif"  data-type="slide" alt="" class="product" border="0" /></a> </div>
              </div>  
             </div>
          </div>
@@ -163,6 +163,7 @@
 
 </div>
 
+<!--
 <div class="slider">
   <div class="slider__viewbox">
     <div class="slider__tape">
@@ -179,6 +180,7 @@
     <button class="slider__prev">Prev</button>
   </div>
 </div>
+-->
 <script defer type="text/javascript" src="project.js"></script>
   
 </body>
