--- a/project/index.html
+++ b/project/index.html
@@ -176,7 +176,7 @@
     </div>
   <!--  <button class="slider__next">Next</button>
     <button class="slider__prev">Prev</button>-->
-    <button class="slider__buy">Купить<
+       <a href="cart.html" class="slider__buy">Купить</a>
   </div>
 </div>
 
