--- a/project/index.html
+++ b/project/index.html
@@ -164,7 +164,6 @@
 </div>
 
 
-<!--
 <div class="slider">
   <div class="slider__viewbox">
     <div class="slider__tape">
@@ -177,9 +176,9 @@
     </div>
   <!--  <button class="slider__next">Next</button>
     <button class="slider__prev">Prev</button>-->
-<!--       <a href="cart.html" class="slider__buy">Купить</a>
+       <a href="cart.html" class="slider__buy">Купить</a>
   </div>
-</div> -->
+</div> 
 
 <script defer type="text/javascript" src="project.js"></script>
   
