--- a/project/flowers.html
+++ b/project/flowers.html
@@ -47,19 +47,19 @@
     <tr>
       <td>
          <div class="new_prod_part"> <a href="#">product name 1</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 2</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
             <div class="new_prod_part"> <a href="#">product name 3</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -67,19 +67,19 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 4</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 5</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
          <div class="new_prod_part"> <a href="#">product name 6</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -87,19 +87,19 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 7</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 8</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
          <div class="new_prod_part"> <a href="#">product name 9</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -113,13 +113,13 @@
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 11</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 12</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -127,19 +127,19 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 13</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 14</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 15</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -147,19 +147,19 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 16</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 17</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 18</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -173,13 +173,13 @@
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 20</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 21</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -187,19 +187,19 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 22</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 23</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 24</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -207,7 +207,7 @@
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 25</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -282,13 +282,13 @@
          <div class="Promotions">
         <div class="title"><span class="title_icon"><img src="pic/bullet4.gif" alt="Promotions" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
       </div>
  </div>
