--- a/project/cart.html
+++ b/project/cart.html
@@ -110,13 +110,13 @@
          <div class="Promotions">
         <div class="title"><span class="title_icon"><img src="pic/bullet4.gif" alt="Promotions" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
       </div>
  </div>
@@ -174,7 +174,21 @@
 
 </div>
 
-
+<div class="slider">
+  <div class="slider__viewbox">
+    <div class="slider__tape">
+      <ul class="slider__wrapper">
+        <li class="slider__item">
+          </li>
+        <li class="slider__item">
+           </li>
+      </ul>
+    </div>
+  <!--  <button class="slider__next">Next</button>
+    <button class="slider__prev">Prev</button>-->
+        <!--   <a href="cart.html" class="slider__buy">Купить</a>->
+  </div>
+</div> 
 <script defer type="text/javascript" src="project.js"></script>
 
   
