--- a/project/myaccaunt.html
+++ b/project/myaccaunt.html
@@ -161,6 +161,21 @@
 
 </div>
 
+<div class="slider">
+  <div class="slider__viewbox">
+    <div class="slider__tape">
+      <ul class="slider__wrapper">
+        <li class="slider__item">
+          </li>
+        <li class="slider__item">
+           </li>
+      </ul>
+    </div>
+  <!--  <button class="slider__next">Next</button>
+    <button class="slider__prev">Prev</button>-->
+       <a href="cart.html" class="slider__buy">Купить</a>
+  </div>
+</div> 
 
 <script defer type="text/javascript" src="project.js"></script>
   <script defer type="text/javascript" src="calendar.js"></script>
