--- a/project/prices.html
+++ b/project/prices.html
@@ -369,6 +369,21 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
  </div>
 
 </div>
+<div class="slider">
+  <div class="slider__viewbox">
+    <div class="slider__tape">
+      <ul class="slider__wrapper">
+        <li class="slider__item">
+          </li>
+        <li class="slider__item">
+           </li>
+      </ul>
+    </div>
+  <!--  <button class="slider__next">Next</button>
+    <button class="slider__prev">Prev</button>-->
+       <a href="cart.html" class="slider__buy">Купить</a>
+  </div>
+</div> 
 
 
 <script defer type="text/javascript" src="project.js"></script>
