--- a/project/cart.html
+++ b/project/cart.html
@@ -51,21 +51,21 @@
             <td>Total</td>
           </tr>
           <tr>
-            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td><a href="#"><img src="pic/cart_thumb.gif" data-type="slide" alt="" border="0" class="cart_thumb" /></a></td>
             <td>Gift flowers</td>
             <td>100$</td>
             <td>1</td>
             <td>100$</td>
           </tr>
           <tr>
-            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td><a href="#"><img src="pic/cart_thumb.gif" data-type="slide" alt="" border="0" class="cart_thumb" /></a></td>
             <td>Gift flowers</td>
             <td>100$</td>
             <td>1</td>
             <td>100$</td>
           </tr>
           <tr>
-            <td><a href="#"><img src="pic/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
+            <td><a href="#"><img src="pic/cart_thumb.gif" data-type="slide" alt="" border="0" class="cart_thumb" /></a></td>
             <td>Gift flowers</td>
             <td>100$</td>
             <td>1</td>
