--- a/project/cart.html
+++ b/project/cart.html
@@ -186,7 +186,7 @@
     </div>
   <!--  <button class="slider__next">Next</button>
     <button class="slider__prev">Prev</button>-->
-        <!--   <a href="cart.html" class="slider__buy">Купить</a>->
+        <!--   <a href="cart.html" class="slider__buy">Купить</a>-->
   </div>
 </div> 
 <script defer type="text/javascript" src="project.js"></script>
