--- a/project/index.html
+++ b/project/index.html
@@ -151,7 +151,7 @@
     <br/>
     <a href="#" alt="Logo" border="0" />Текст</a>
   </div>
-  <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a>
+  <div class="menu-footer"> <a href="index.html">home</a> <a href="about_us.html">about us</a> <a href="flowers.html">flowers</a> <a href="prices.html">prices</a> <a href="contact.html">contact us</a>
     <br>
     <div class="footer-social">
      <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
