--- a/project/contact.html
+++ b/project/contact.html
@@ -146,12 +146,12 @@
 <div class="footer">
 <div class="footer_left">
       <img src="pic/footer_logo.gif" alt="Logo">
-<br/>
-      <a href="#" alt="Logo" border="0" />Текст</a>
+    <br/>
+    <a href="curriculum_vitae.html" target="_blank" alt="Logo" border="0" />Текст</a>
   </div>
-
-   <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a>
-     <br>
+  
+  <div class="menu-footer"> <a href="index.html">home</a> <a href="about_us.html">about us</a> <a href="flowers.html">flowers</a> <a href="prices.html">prices</a> <a href="contact.html">contact us</a>
+    <br/>
      
      
   <div class="footer-social">
