--- a/project/prices.html
+++ b/project/prices.html
@@ -2,7 +2,7 @@
   <head>
   <meta charset="utf-8" name="Prices">
   <title>Кириллова Ирина</title>
-  <link rel="stylesheet" href="sitefull.css">
+  <link rel="stylesheet" href="sitefullorn.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -59,7 +59,7 @@
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
      <div class="price"><strong>PRICE:</strong> <span class="red">100 $</span></div>
             <div class="price"><strong>COLORS:</strong> <span class="colors"><img src="pic/color1.gif" alt="Yellow" border="0" /></span> <span class="colors"><img src="pic/color2.gif" alt="Green" border="0" /></span> <span class="colors"><img src="pic/color3.gif" alt="Blue" border="0" /></span> </div>
-            <a href="cart.html" class="more"><img src="pic/order_now.gif" alt="Cart" border="0" /></a>
+            <a href="cart.html" class="more"><img src="pic/order_now.gif" class="more_button" alt="Cart" /></a>
      </div>
      </>
      
