--- a/project/prices.html
+++ b/project/prices.html
@@ -59,7 +59,7 @@
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
      <div class="price"><strong>PRICE:</strong> <span class="red">100 $</span></div>
             <div class="price"><strong>COLORS:</strong> <span class="colors"><img src="pic/color1.gif" alt="Yellow" border="0" /></span> <span class="colors"><img src="pic/color2.gif" alt="Green" border="0" /></span> <span class="colors"><img src="pic/color3.gif" alt="Blue" border="0" /></span> </div>
-            <a href="cart.html" class="more"><img src="pic/order_now.gif" class="more_button" alt="Cart"  border="0"/></a>
+            <a href="cart.html" class="more"><img src="pic/order_now.gif" alt="Cart"  border="0"/></a>
      </div>
      </>
      
