--- a/project/cart.html
+++ b/project/cart.html
@@ -11,12 +11,12 @@
 
  <body>
           
-  <div id="popup-container">
+<!--  <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
   </div>
 </div>
-
+-->
 <div class="first_part">
   <div class="top_img">
    <!--   <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/logo.gif" alt="Logo">-->
