--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -12,11 +12,12 @@
 
   <body>
             
-  <div id="popup-container">
+<!--  <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
   </div>
 </div>
+-->
 
 <div class="first_part">
   <div class="top_img">
